# epics-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
crates/ad-core/: Cargo.toml  README.md
crates/ad-core-rs/: README.md
crates/ad-core-rs/src/: attributes.rs  codec.rs  color.rs  color_layout.rs  ndarray.rs  ndarray_pool.rs  roi.rs
crates/ad-core/ioc/: commonPlugins.cmd
crates/ad-core/src/driver/: ad_driver.rs
crates/ad-core/src/ioc/: driver_context.rs  plugin_device_support.rs  plugin_manager.rs
crates/ad-core/src/plugin/: channel.rs  runtime.rs  wiring.rs
crates/ad-plugins/: Cargo.toml  README.md
crates/ad-plugins-rs/: README.md
crates/ad-plugins-rs/src/: attr_plot.rs  attribute.rs  bad_pixel.rs  circular_buff.rs  codec.rs  color_convert.rs  fft.rs  file_hdf5.rs  file_jpeg.rs  file_netcdf.rs  file_tiff.rs  ioc.rs  lib.rs  overlay.rs  pos_plugin.rs  process.rs  roi.rs  roi_stat.rs  scatter.rs  stats.rs  time_series.rs  transform.rs
crates/ad-plugins-rs/tests/: integration.rs
crates/ad-plugins/src/: attribute.rs  color_convert.rs  file_hdf5.rs  file_netcdf.rs  ioc.rs  lib.rs  pos_plugin.rs  process.rs  roi.rs  roi_stat.rs  stats.rs  std_arrays.rs
crates/ad-plugins/tests/: integration.rs
crates/asyn/: Cargo.toml  README.md
crates/asyn-rs/: README.md
crates/asyn-rs/benches/: throughput.rs
crates/asyn-rs/src/: adapter.rs  exception.rs  interrupt.rs  manager.rs  param.rs  port.rs  port_actor.rs  port_handle.rs  request.rs
crates/asyn-rs/tests/: port_driver_tests.rs
crates/asyn/benches/: throughput.rs
crates/asyn/examples/: scope_ioc.rs  scope_simulator.rs
crates/asyn/ioc/: st.cmd
crates/asyn/src/: adapter.rs  autoconnect.rs  lib.rs  manager.rs  param.rs  port.rs  port_actor.rs  port_handle.rs  port_worker.rs  request.rs  sync_io.rs
crates/asyn/tests/: golden_integration.rs
crates/autosave/: Cargo.toml  README.md
crates/autosave/src/: backup.rs  error.rs  iocsh.rs  lib.rs  macros.rs  manager.rs  request.rs  save_file.rs  save_set.rs  verify.rs
crates/autosave/tests/: backup.rs  manager.rs
crates/busy/: Cargo.toml  README.md
crates/busy/src/: lib.rs  record.rs  types.rs
crates/busy/tests/: busy_test.rs
crates/calc/: Cargo.toml  README.md
crates/calc/src/: lib.rs
crates/calc/src/engine/: array.rs  array_value.rs  mod.rs  numeric.rs  opcodes.rs  postfix.rs  string.rs  token.rs  value.rs
crates/calc/src/math/: interp.rs
crates/calc/src/record/: mod.rs  scalcout.rs  sseq.rs  transform.rs
crates/calc/tests/: array_advanced_tests.rs  array_core_tests.rs  compile_tests.rs  error_tests.rs  eval_tests.rs  string_advanced_tests.rs  string_core_tests.rs
crates/epics-base/: Cargo.toml  README.md
crates/epics-base-rs/src/: lib.rs
crates/epics-base-rs/tests/: autosave_backup.rs  autosave_manager.rs  autosave_request_parsing.rs  autosave_save_restore.rs  autosave_verify.rs  busy_test.rs  c_epics_parity.rs  calc_array_advanced_tests.rs  calc_array_core_tests.rs  calc_compile_tests.rs  calc_error_tests.rs  calc_eval_tests.rs  calc_string_advanced_tests.rs  calc_string_core_tests.rs  client_server.rs  database_tests.rs  record_tests.rs  types_tests.rs
crates/epics-base/src/: channel.rs  error.rs  lib.rs  protocol.rs  repeater.rs  types.rs
crates/epics-base/tests/: c_epics_parity.rs  c_epics_parity_wire.rs
crates/epics-ca-rs/src/: protocol.rs
crates/epics-macros/: Cargo.toml
crates/epics-macros-rs/src/: lib.rs
crates/epics-pva-rs/src/: client.rs  codec.rs  protocol.rs  serialize.rs
crates/epics-pva-rs/tests/: pvdata_tests.rs
crates/epics-rs/: Cargo.toml
crates/epics-rs/src/: lib.rs
crates/motor/: Cargo.toml  README.md
crates/motor-rs/: README.md
crates/motor-rs/benches/: motor.rs
crates/motor-rs/src/: axis_runtime.rs  coordinate.rs  device_support.rs  fields.rs  ioc.rs  lib.rs  poll_loop.rs  sim_motor.rs
crates/motor-rs/tests/: integration.rs  parity_retry.rs  parity_set_mode.rs  record_tests.rs  scenarios.rs
crates/motor/src/: axis_runtime.rs  device_support.rs  ioc.rs  lib.rs  poll_loop.rs  record.rs
crates/motor/tests/: parity_retry.rs  scenarios.rs
crates/msi/: Cargo.toml  README.md
crates/msi/src/: error.rs  lib.rs  maclib.rs  subst.rs  template.rs
crates/msi/tests/: integration_tests.rs
crates/optics-rs/: Cargo.toml  README.md
crates/optics-rs/src/: db_access.rs  lib.rs  seq_runner.rs
crates/optics-rs/tests/: golden_gen  golden_gen.c  golden_values.txt
crates/optics-rs/ui/: 2filter.ui  2filter_setup.ui  2iddMicroscope.ui  2iddMicroscope_full.ui  2postMirror.ui  2slit.ui  2slit_soft.ui  4filter.ui  4filter_setup.ui  4slitGraphic.ui  4slitGraphic_soft.ui  ASRPmirrorTable.ui  ASRPmirrorTable_small.ui  CoarseFineMotor.ui  CoarseFineMotorHelp.ui  CoarseFineMotorShow.ui  Io.ui  Io_small.ui  MLLH.ui  MLLH_bare.ui  MLLH_more.ui  MLLV.ui  MLLV_bare.ui  MLLV_more.ui  SGM.ui  SGM_gratings.ui  SGM_tiny.ui  TheBox_Bragg.ui  TheBox_calc.ui  TheBox_graphic.ui  TheBox_graphic_try.ui  XIA_filter.ui  XIA_shutter.ui  XIA_shutterTry.ui  XIA_shutterTry_more.ui  XIA_shutterTry_small.ui  XIA_shutter_more.ui  XIA_shutter_small.ui  bProtect.ui  fb_epid.ui  (+89 more)
crates/scaler-rs/ui/: scaler.ui  scaler16.ui  scaler16_full.ui  scaler16_full_calc.ui  scaler16_more.ui  scaler16m.ui  scaler16m_full.ui  scaler16m_full_calc.ui  scaler16m_more.ui  scaler32.ui  scaler32_full.ui  scaler32_full_calc.ui  scaler32_more.ui  scaler33_64.ui  scaler64.ui  scaler64_full.ui  scaler64_more.ui  scaler_full.ui  scaler_full_calc.ui  scaler_more.ui
crates/seq/: Cargo.toml  README.md
crates/seq/src/: channel.rs  lib.rs  program.rs  state_set.rs
crates/sim-detector/: Cargo.toml
crates/sim-detector/src/: task.rs
crates/snc/: Cargo.toml
crates/snc-core/: Cargo.toml
crates/snc-core/src/: codegen.rs  codegen_test.rs  lib.rs
crates/snc/src/: main.rs
examples/mini-beamline/: Cargo.toml  README.md
examples/scope-ioc/: Cargo.toml
examples/seq-demo/: Cargo.toml  README.md  demo.st
examples/sim-detector/: Cargo.toml
examples/sim-detector/ioc/: st.cmd
examples/sim-detector/src/: driver.rs  ioc_support.rs  task.rs
(+271 files in other folders)
