[package]
name = "ad-core"
version.workspace = true
edition = "2021"
description = "Core types and base classes for areaDetector-rs"
license = "MIT"
readme = "README.md"

[dependencies]
asyn-rs = { workspace = true }
epics-base-rs = { workspace = true, optional = true }
tokio = { version = "1", features = ["sync", "time", "rt", "macros"] }
tracing = "0.1"
thiserror = "2"
parking_lot = "0.12"

[features]
default = []
ioc = ["dep:epics-base-rs", "asyn-rs/epics"]
