[package]
name = "autosave-rs"
version = "0.2.1"
edition = "2021"
description = "EPICS autosave ported to Rust — thin wrapper over epics-base-rs"

[dependencies]
epics-base-rs = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "fs"] }
tempfile = "3"
