[package]
name = "autosave-rs"
version.workspace = true
edition = "2021"
description = "EPICS autosave ported to Rust — thin wrapper over epics-base-rs"
license = "MIT"
readme = "README.md"

[dependencies]
epics-base-rs = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "fs"] }
tempfile = "3"
