[package]
name = "calc-rs"
version.workspace = true
edition = "2021"
description = "EPICS calc expression engine in Rust — thin wrapper over epics-base-rs"
license = "MIT"
readme = "README.md"

[features]
default = ["numeric"]
numeric = []
string = []
array = ["math"]
math = []
epics = ["string", "array"]

[dependencies]
epics-base-rs = { workspace = true }
