[package]
name = "motor-rs"
version = "0.2.1"
edition = "2021"
description = "Rust port of EPICS motor record"

[dependencies]
epics-base-rs = { path = "../epics-base" }
asyn-rs = { path = "../asyn" }
tokio = { version = "1", features = ["sync", "time", "rt", "macros"] }
bitflags = "2"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "motor"
harness = false
