[package]
name = "sim-detector"
version.workspace = true
edition = "2021"
description = "Simulated areaDetector driver for areadetector-rs"

[features]
ioc = ["dep:epics-base-rs", "dep:tokio", "dep:ad-plugins", "ad-plugins/ioc", "ad-core/ioc", "asyn-rs/epics"]

[dependencies]
ad-core = { workspace = true }
ad-plugins = { workspace = true, optional = true }
asyn-rs = { workspace = true }
rand = "0.8"
parking_lot = "0.12"
epics-base-rs = { workspace = true, optional = true }
tokio = { version = "1", features = ["full"], optional = true }

[[bin]]
name = "sim_ioc"
path = "src/bin/sim_ioc.rs"
required-features = ["ioc"]

[[example]]
name = "demo"
path = "examples/demo.rs"
